--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <head>
     <link rel="stylesheet" href="style.css">
-    <script src="prefixfree.js"></script>
+    //<script src="prefixfree.js"></script>
   </head>
   
   <body>
